bad/bin_op_eq_class_side_class.example_compiler_output
ERROR
[1mbad/bin_op_eq_class_side_class.lat:6:8: [1;31merror: [0;1moperator == cannot compare values of types `Z` and `Y` because values are not convertible to either of the two types[m
	new Z == new Y;
	      [1;32m^[m
